--- a/public/css/style.css
+++ b/public/css/style.css
@@ -230,7 +230,7 @@ body {
 }
 
 body > div { min-height: 480px !important; text-align: left; }
-
+.container { width: ; height: ; }
 .content { background: #fff; color: #111; font-family: Courier; margin: 0px; padding: 10px 5px 10px 10px; min-height: 400px; }
 .content p { margin: 0px 0 10px; padding: 0px; }
 .content blockquote { margin: 10px; padding: 0px; }
