--- a/public/themes/uscon/theme.css
+++ b/public/themes/uscon/theme.css
@@ -18,9 +18,10 @@ h1, h2 {
 .toolbar {
     -webkit-box-sizing: border-box;
     border-bottom: 1px solid #2d3642;
-    padding: 10px;
     height: 42px;
-    /*background: url(img/toolbar.png) #6d84a2 repeat-x;*/
+    /*background: url(img/toolbar.png) #6d84a2 repeat-x;
+    padding: 10px;
+	*/
     background: #e1d5bb url(img/vellum-bg.png) repeat-x;
     position: relative;
 }
@@ -74,14 +75,17 @@ body.landscape .toolbar > h1 {
     white-space: nowrap;
     background: none;
     -webkit-border-image: url(img/toolButton-1.png) 0 5 0 5;
+    -moz-border-image: url(img/toolButton-1.png) 0 5 0 5;
 }
 
 .button.active, .back.active, .cancel.active, .add.active {
     -webkit-border-image: url(img/toolButton-1.png) 0 5 0 5;	
+    -moz-border-image: url(img/toolButton-1.png) 0 5 0 5;	
 }
 
 .back.active {
     -webkit-border-image: url(img/backButton-2.png) 0 8 0 14;	
+    -moz-border-image: url(img/backButton-2.png) 0 8 0 14;	
 }
 
 .blueButton {
@@ -96,6 +100,7 @@ body.landscape .toolbar > h1 {
     max-width: 55px;
     border-width: 0 8px 0 14px;
     -webkit-border-image: url(img/backButton-2.png) 0 8 0 14;
+    -moz-border-image: url(img/backButton-2.png) 0 8 0 14;
 }
 
 .leftButton, .cancel {
@@ -147,6 +152,7 @@ ul {
     padding: 0;
     margin: 10px 10px 10px 5px;
     -webkit-border-radius: 8px;
+    -moz-border-radius: 8px;
 }
 
 ul li {
