--- a/public/css/style.css
+++ b/public/css/style.css
@@ -238,7 +238,83 @@ body > div { min-height: 480px !important; text-align: left; }
 .content p.note { background-color: #444; color: #fff; font-size: 12px; line-height: 16px; margin: 5px 0 15px -10px; padding: 5px 5px 5px 10px; -moz-border-radius-bottomright: 50px; border-bottom-right-radius: 50px; -webkit-border-bottom-right-radius:50px; }
 .content p.note-top { background-color: #444; color: #fff; font-size: 12px; line-height: 16px; margin: -5px 0 10px -10px; padding: 5px 5px 5px 10px; -moz-border-radius-bottomright: 50px; border-bottom-right-radius: 50px; -webkit-border-bottom-right-radius:50px; }
 
+#about .content { background: #ccc; }
+
 .inline { display:inline-block;}
+
+/* button toggle */
+
+.b-toggle {
+	position: relative;
+	display: inline-block;
+	width: 100px;
+	height: 100px;
+	border-radius: 100px;
+	margin: 1px;
+	
+	background: -webkit-gradient(radial, center top, 300, center top, 120, from(hsla(0,0%,50%,0)), to(hsla(0,0%,100%,.6)));
+	background: -moz-radial-gradient(50% 0% 180deg, circle cover, hsla(0,0%,100%,.6) 50%, hsla(0,0%,80%,0) 100%);
+	background: -o-radial-gradient(50% 0% 180deg, circle cover, hsla(0,0%,100%,.6) 50%, hsla(0,0%,80%,0) 100%);
+	background: radial-gradient(50% 0% 180deg, circle cover, hsla(0,0%,100%,.6) 50%, hsla(0,0%,80%,0) 100%);
+	
+	-webkit-box-shadow: inset rgba(0,0,0,0.05) 0 -4px 5px, inset rgba(252,254,255,0.4) 0 4px 3px, rgba(0,0,0,0.1) 0 2px 1px;
+	   -moz-box-shadow: inset rgba(0,0,0,0.05) 0 -4px 5px, inset rgba(252,254,255,0.4) 0 4px 3px, rgba(0,0,0,0.1) 0 2px 1px;
+	     -o-box-shadow: inset rgba(0,0,0,0.05) 0 -4px 5px, inset rgba(252,254,255,0.4) 0 4px 3px, rgba(0,0,0,0.1) 0 2px 1px;
+	        box-shadow: inset rgba(0,0,0,0.05) 0 -4px 5px, inset rgba(252,254,255,0.4) 0 4px 3px, rgba(0,0,0,0.1) 0 2px 1px;
+	
+	
+	/* transition setup */
+	-webkit-transform: translateY(0px);
+	   -moz-transform: translateY(0px);
+	     -o-transform: translateY(0px);
+	        transform: translateY(0px);
+	
+	-webkit-transition: -webkit-transform .6s cubic-bezier(.3, 0, 0, 1);
+	   -moz-transition:    -moz-transform .6s cubic-bezier(.3, 0, 0, 1);
+	     -o-transition:      -o-transform .6s cubic-bezier(.3, 0, 0, 1);
+	        transition:         transform .6s cubic-bezier(.3, 0, 0, 1);
+}
+.b-toggle:hover {
+	padding: 1px;
+	margin: 0;
+}
+.b-toggle:active {
+	padding: 0px;
+	margin: 1px;
+	
+	background: -webkit-gradient(radial, center top, 300, center top, 120, from(hsla(0,0%,50%,0)), to(hsla(0,0%,100%,.3)));
+	background: -moz-radial-gradient(50% 0% 180deg, circle cover, hsla(0,0%,100%,.3) 50%, hsla(0,0%,80%,0) 100%);
+	background: -o-radial-gradient(50% 0% 180deg, circle cover, hsla(0,0%,100%,.3) 50%, hsla(0,0%,80%,0) 100%);
+	background: radial-gradient(50% 0% 180deg, circle cover, hsla(0,0%,100%,.3) 50%, hsla(0,0%,80%,0) 100%);
+}
+
+.b-toggle a {
+	display: block;
+	position: absolute;
+	width: 100px;
+	height: 100px;
+	
+	-webkit-transition: -webkit-transform .6s cubic-bezier(.3, 0, 0, 1);
+	   -moz-transition:    -moz-transform .6s cubic-bezier(.3, 0, 0, 1);
+	     -o-transition:      -o-transform .6s cubic-bezier(.3, 0, 0, 1);
+	        transition:         transform .6s cubic-bezier(.3, 0, 0, 1);
+}
+.b-toggle .top {
+	background: url(../images/top.png) no-repeat;
+	
+	-webkit-transform: rotate(0deg);
+	   -moz-transform: rotate(0deg);
+	     -o-transform: rotate(0deg);
+	        transform: rotate(0deg);
+}
+.b-toggle .bot {
+	background: url(../images/bot.png) no-repeat;
+	
+	-webkit-transform: rotate(180deg);
+	   -moz-transform: rotate(180deg);
+	     -o-transform: rotate(180deg);
+	        transform: rotate(180deg);
+}
 
 
 /*
